Exit somewhat gracefully when unable to allocate a PTY.

BUG: 87481

svn path=/trunk/kdebase/konsole/; revision=403562